dataset1235/2025-2/1153765216/users/1581346053/executions/2747719322_3691284457.log
== SUBMISSION (2025-08-21 19:11:14)
-- CODE: 
n1 = float(input("Digite a nota 1:"))
n2 = float(input("Digite a nota 2:"))
n3 = float(input("Digite a nota 3:"))
n4 = float(input("Digite a nota 4:"))
media = ((n1*1)+(n2*2)+(n3*3)+(n4*4)/1+2+3+4)
print(round(media, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:88.36
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:91.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:79.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:76.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:309.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:87.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:07:55)
-- CODE: 
n1 = int(input("Digite a nota 1:"))
n2 = int(input("Digite a nota 2:"))
n3 = int(input("Digite a nota 3:"))
n4 = int(input("Digite a nota 4:"))
media = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4) / 4)
print(round(media, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1:"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5.75'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1:"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '8.0'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1:"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '7.0'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1:"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1:"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.0'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1:"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5.0'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:07:53)
-- CODE: 
n1 = int(input("Digite a nota 1:"))
n2 = int(input("Digite a nota 2:"))
n3 = int(input("Digite a nota 3:"))
n4 = int(input("Digite a nota 4:"))
media = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4) / 4)
print(round(media, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1:"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5.75'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1:"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '8.0'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1:"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '7.0'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1:"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1:"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.0'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1:"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:05:55)
-- CODE: 
n1 = float(input("Digite a nota 1:"))
n2 = float(input("Digite a nota 2:"))
n3 = float(input("Digite a nota 3:"))
n4 = float(input("Digite a nota 4:"))
media = ((n1*1) + (n2*2) + (n3*3) + (n4*4) / 4)
print(round(media, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:52.39
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:55.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:49.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:37.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:180.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:48.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:08:58)
-- CODE: 
n1 = float(input("Digite a nota 1:"))
n2 = float(input("Digite a nota 2:"))
n3 = float(input("Digite a nota 3:"))
n4 = float(input("Digite a nota 4:"))
media = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4) / 4)
print(round(media, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:52.39
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:55.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:49.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:37.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:180.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:48.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:11:28)
-- CODE: 
n1 = float(input("Digite a nota 1:"))
n2 = float(input("Digite a nota 2:"))
n3 = float(input("Digite a nota 3:"))
n4 = float(input("Digite a nota 4:"))
media = ((n1*1)+(n2*2)+(n3*3)+(n4*4)/1+2+3+4)
print(round(media, 2))

-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:88.36
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:91.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:79.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:76.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:309.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:87.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:02:50)
-- CODE: 
n1 = float(input("Digite a nota 1"))
n2 = float(input("Digite a nota 2"))
n3 = float(input("Digite a nota 3"))
n4 = float(input("Digite a nota 4"))
media = (n1+n2+n3+n4/4)
print(round(media, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a nota 1Digite a nota 2Digite a nota 3Digite a nota 422.85
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a nota 1Digite a nota 2Digite a nota 3Digite a nota 425.75
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a nota 1Digite a nota 2Digite a nota 3Digite a nota 422.75
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a nota 1Digite a nota 2Digite a nota 3Digite a nota 411.5
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a nota 1Digite a nota 2Digite a nota 3Digite a nota 470.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a nota 1Digite a nota 2Digite a nota 3Digite a nota 419.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:07:46)
-- CODE: 
n1 = int(input("Digite a nota 1:"))
n2 = int(input("Digite a nota 2:"))
n3 = int(input("Digite a nota 3:"))
n4 = int(input("Digite a nota 4:"))
media = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4) / 4)
print(round(media, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1:"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5.75'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1:"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '8.0'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1:"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '7.0'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1:"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1:"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.0'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1:"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:01:57)
-- CODE: 
n1 = int(input("Digite a nota 1"))
n2 = float(input("Digite a nota 2"))
n3 = float(input("Digite a nota 3"))
n4 = float(input("Digite a nota 4"))
media = (n1+n2+n3+n4/4)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5.75'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '8.0'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '7.0'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.0'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5.0'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:08:56)
-- CODE: 
n1 = float(input("Digite a nota 1:"))
n2 = float(input("Digite a nota 2:"))
n3 = float(input("Digite a nota 3:"))
n4 = float(input("Digite a nota 4:"))
media = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4) / 4)
print(round(media, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:52.39
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:55.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:49.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:37.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:180.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:48.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:07:18)
-- CODE: 
n1 = float(input("Digite a nota 1:"))
n2 = float(input("Digite a nota 2:"))
n3 = float(input("Digite a nota 3:"))
n4 = float(input("Digite a nota 4:"))
media = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4) / 4)
print(round(media, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:52.39
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:55.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:49.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:37.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:180.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:48.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:11:05)
-- CODE: 
n1 = float(input("Digite a nota 1:"))
n2 = float(input("Digite a nota 2:"))
n3 = float(input("Digite a nota 3:"))
n4 = float(input("Digite a nota 4:"))
media = ((n1*1)+(n2*2)+(n3*3)+(n4*4)/1+2+3+4)
print(round(media, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:88.36
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:91.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:79.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:76.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:309.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:87.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:07:40)
-- CODE: 
n1 = int(input("Digite a nota 1:"))
n2 = int(input("Digite a nota 2:"))
n3 = int(input("Digite a nota 3:"))
n4 = int(input("Digite a nota 4:"))
media = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4) / 4)
print(round(media, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1:"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5.75'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1:"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '8.0'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1:"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '7.0'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1:"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1:"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '10.0'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n1 = int(input("Digite a nota 1:"))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '5.0'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:05:57)
-- CODE: 
n1 = float(input("Digite a nota 1:"))
n2 = float(input("Digite a nota 2:"))
n3 = float(input("Digite a nota 3:"))
n4 = float(input("Digite a nota 4:"))
media = ((n1*1) + (n2*2) + (n3*3) + (n4*4) / 4)
print(round(media, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:52.39
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:55.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:49.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:37.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:180.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:48.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:07:17)
-- CODE: 
n1 = float(input("Digite a nota 1:"))
n2 = float(input("Digite a nota 2:"))
n3 = float(input("Digite a nota 3:"))
n4 = float(input("Digite a nota 4:"))
media = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4) / 4)
print(round(media, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:52.39
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:55.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:49.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:37.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:180.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:48.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:02:48)
-- CODE: 
n1 = float(input("Digite a nota 1"))
n2 = float(input("Digite a nota 2"))
n3 = float(input("Digite a nota 3"))
n4 = float(input("Digite a nota 4"))
media = (n1+n2+n3+n4/4)
print(round(media, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a nota 1Digite a nota 2Digite a nota 3Digite a nota 422.85
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a nota 1Digite a nota 2Digite a nota 3Digite a nota 425.75
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a nota 1Digite a nota 2Digite a nota 3Digite a nota 422.75
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a nota 1Digite a nota 2Digite a nota 3Digite a nota 411.5
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a nota 1Digite a nota 2Digite a nota 3Digite a nota 470.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a nota 1Digite a nota 2Digite a nota 3Digite a nota 419.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:12:19)
-- CODE: 
n1 = float(input("Digite a nota 1:"))
n2 = float(input("Digite a nota 2:"))
n3 = float(input("Digite a nota 3:"))
n4 = float(input("Digite a nota 4:"))
media = ((n1*1)+(n2*2)+(n3*3)+(n4*4))/(1+2+3+4)
print(round(media, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:7.94
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:8.2
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:7.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:6.7
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:30.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:7.8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:03:49)
-- CODE: 
n1 = float(input("Digite a nota 1:"))
n2 = float(input("Digite a nota 2:"))
n3 = float(input("Digite a nota 3:"))
n4 = float(input("Digite a nota 4:"))
media = (n1+n2+n3+n4/4)
print(round(media, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:22.85
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:25.75
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:22.75
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:11.5
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:70.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:19.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:11:47)
-- CODE: 
n1 = float(input("Digite a nota 1:"))
n2 = float(input("Digite a nota 2:"))
n3 = float(input("Digite a nota 3:"))
n4 = float(input("Digite a nota 4:"))
media = ((n1*1)+(n2*2)+(n3*3)+(n4*4))/1+2+3+4)
print(round(media, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
-- ERROR:
File "XXXX", line 5
    media = ((n1*1)+(n2*2)+(n3*3)+(n4*4))/1+2+3+4)
                                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
-- ERROR:
File "XXXX", line 5
    media = ((n1*1)+(n2*2)+(n3*3)+(n4*4))/1+2+3+4)
                                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
-- ERROR:
File "XXXX", line 5
    media = ((n1*1)+(n2*2)+(n3*3)+(n4*4))/1+2+3+4)
                                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
-- ERROR:
File "XXXX", line 5
    media = ((n1*1)+(n2*2)+(n3*3)+(n4*4))/1+2+3+4)
                                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
-- ERROR:
File "XXXX", line 5
    media = ((n1*1)+(n2*2)+(n3*3)+(n4*4))/1+2+3+4)
                                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
-- ERROR:
File "XXXX", line 5
    media = ((n1*1)+(n2*2)+(n3*3)+(n4*4))/1+2+3+4)
                                                 ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:04:29)
-- CODE: 
n1 = float(input("Digite a nota 1:"))
n2 = float(input("Digite a nota 2:"))
n3 = float(input("Digite a nota 3:"))
n4 = float(input("Digite a nota 4:"))
media = (n1 + n2 + n3 + n4 / 4)
print(round(media, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:22.85
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:25.75
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:22.75
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:11.5
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:70.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:19.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:07:09)
-- CODE: 
n1 = float(input("Digite a nota 1:"))
n2 = float(input("Digite a nota 2:"))
n3 = float(input("Digite a nota 3:"))
n4 = float(input("Digite a nota 4:"))
media = ((n1 * 1) + (n2 * 2) + (n3 * 3) + (n4 * 4) / 4)
print(round(media, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:52.39
-- TEST CASE 2:
---- input:
8.0
8.5
7.0
9.0
---- correct output:
8.2
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:55.0
-- TEST CASE 3:
---- input:
7.0
7.0
7.0
7.0
---- correct output:
7.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:49.0
-- TEST CASE 4:
---- input:
0.0
0.0
9.0
10.0
---- correct output:
6.7
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:37.0
-- TEST CASE 5:
---- input:
10.0
20.0
30.0
40.0
---- correct output:
30.0
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:180.0
-- TEST CASE 6:
---- input:
5.0
3.0
9.0
10.0
---- correct output:
7.8
---- user output:
Digite a nota 1:Digite a nota 2:Digite a nota 3:Digite a nota 4:48.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
